Fix icon alignment

--- a/ui/src/components/badge/badge.scss
+++ b/ui/src/components/badge/badge.scss
@@ -17,4 +17,5 @@
 .badge-icon path {
   color: #fff !important;
   fill: #fff !important;
+  stroke: #fff !important;
 }
